--- a/LigaproIsaacTrujillo/appsettings.json
+++ b/LigaproIsaacTrujillo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LigaproIsaacTrujilloContext": "Server=(localdb)\\mssqllocaldb;Database=LigaproIsaacTrujilloContext-df7c02ea-38bb-446a-bee3-8df068375528;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
