--- a/LigaproIsaacTrujillo/appsettings.json
+++ b/LigaproIsaacTrujillo/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LigaproIsaacTrujilloContext": "Server=(localdb)\\mssqllocaldb;Database=LigaproIsaacTrujilloContext-df7c02ea-38bb-446a-bee3-8df068375528;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LigaproIsaacTrujilloContext": "Server=localhost;Database=LigaproIsaacTrujilloContext-df7c02ea-38bb-446a-bee3-8df068375528;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
